# db-storage-service

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  dependencies.py  exc.py  main.py
src/endpoints/: handlers.py  words.py
src/models/: __init__.py  bot_models.py  dict_models.py
src/services/: database.py  rabbitmq.py  redis.py
