[project]
name = "db-storage-service"
version = "0.1.1"
description = "Service for Managing DB Storage"
authors = [
    {name = "Gabriel Bouchard",email = "gabouchard2002@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.3"
dependencies = [
    "faststream[rabbit] (>=0.6.3,<0.7.0)",
    "fastapi (>=0.123.0,<0.124.0)",
    "aio-pika (>=9.5.8,<10.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

